mark used letters when building a word

--- a/word-wheel.css
+++ b/word-wheel.css
@@ -34,6 +34,10 @@ table.columns td {
 	fill: #F88;
 	}
 
+.letter-circle[used] {
+	fill: #CCC;
+	}
+
 .wheel-letter {
 	font-size: 120px;
 	text-anchor: middle;
